fixed spacing mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1383,7 +1383,7 @@ margin-right: 1.6rem;
     }
 
     .jumbo h1 {
-      margin-top: 20rem;
+      margin-top: 17rem;
     }
    
     .main-text{
